feat:enterprise add cn

--- a/src/app/i18n/locales/en-US/landing-page.json
+++ b/src/app/i18n/locales/en-US/landing-page.json
@@ -12,5 +12,46 @@
   "subscribe.free-trial": "free trial",
   "subscribe.email.invalid": "Please enter a valid email",
   "subscribe.success": "Subscribed!",
-  "subscribe.error": "Subscribe failed, please try again later"
+  "subscribe.error": "Subscribe failed, please try again later",
+  "hero.enterprise.title": "Muse AI-Native DAM",
+  "hero.enterprise.subtitle": "for brands that drive growth, streamline content, and protect assets",
+  "hero.enterprise.button": "Book a demo",
+  "hero.enterprise.why.title": "Why AI-Native Digital Asset Management?",
+  "hero.enterprise.why.desc": "MuseDAM leverages AI to revolutionize digital asset management, delivering three core values",
+  "hero.enterprise.accordion.growth.title": "Drive Business Growth",
+  "hero.enterprise.accordion.growth.desc": "Transform static assets into growth engines",
+  "hero.enterprise.accordion.growth.line1.title": "AskMuse AI Engine:",
+  "hero.enterprise.accordion.growth.line1.desc": " Generate professional marketing copy in 3 minutes, eliminating content creation struggles",
+  "hero.enterprise.accordion.growth.line2.title": "Smart Content Insights:",
+  "hero.enterprise.accordion.growth.line2.desc": " AI analyzes high-performing content patterns to guide data-driven creative decisions",
+  "hero.enterprise.accordion.growth.line3.title": "Value Discovery:",
+  "hero.enterprise.accordion.growth.line3.desc": " Automatically uncover hidden commercial potential in dormant digital assets",
+  "hero.enterprise.accordion.growth.result1": "faster content production",
+  "hero.enterprise.accordion.growth.result2": "higher asset reuse rates",
+  "hero.enterprise.accordion.lifecycle.title": "Streamline Content Lifecycle",
+  "hero.enterprise.accordion.lifecycle.desc": "AI-native technology simplifies every stage from creation to archive",
+  "hero.enterprise.accordion.lifecycle.line1.title": "Natural Language Search:",
+  "hero.enterprise.accordion.lifecycle.line1.desc": " Simply say 'find a red product background' and AI delivers instant results",
+  "hero.enterprise.accordion.lifecycle.line2.title": "Auto-Classification:",
+  "hero.enterprise.accordion.lifecycle.line2.desc": " Upload and instantly categorize content, scenes, and colors without manual effort",
+  "hero.enterprise.accordion.lifecycle.line3.title": "Efficient Version Control:",
+  "hero.enterprise.accordion.lifecycle.line3.desc": " One-click rollback—never lose important edits again",
+  "hero.enterprise.accordion.lifecycle.line4.title": "Seamless Team Collaboration:",
+  "hero.enterprise.accordion.lifecycle.line4.desc": " @mentions, comments, and permission settings make teamwork effortless",
+  "hero.enterprise.accordion.lifecycle.result1": "faster asset discovery",
+  "hero.enterprise.accordion.lifecycle.result2": "improved team efficiency",
+  "hero.enterprise.accordion.lifecycle.result3": "shorter delivery cycles",
+  "hero.enterprise.accordion.assets.title": "Protect Digital Assets",
+  "hero.enterprise.accordion.assets.desc": "Enterprise-grade security with intelligent controls ensure brand asset safety",
+  "hero.enterprise.accordion.assets.line1.title": "Granular Permission Control:",
+  "hero.enterprise.accordion.assets.line1.desc": " Three-tier access management across departments, projects, and individual files",
+  "hero.enterprise.accordion.assets.line2.title": "Smart Watermark Protection:",
+  "hero.enterprise.accordion.assets.line2.desc": " Dynamic visitor information display prevents unauthorized usage",
+  "hero.enterprise.accordion.assets.line3.title": "Complete Operation Logs:",
+  "hero.enterprise.accordion.assets.line3.desc": " 60+ core actions tracked for full asset usage transparency",
+  "hero.enterprise.accordion.assets.line4.title": "Secure Sharing:",
+  "hero.enterprise.accordion.assets.line4.desc": " Whitelist controls, expiration dates, and password protection for multi-layer security",
+  "hero.enterprise.accordion.assets.result1": "reduced data breach risk",
+  "hero.enterprise.accordion.assets.result2": "operation traceability",
+  "hero.enterprise.accordion.result": "Results:"
 }
