--- a/src/app/i18n/locales/zh-CN/landing-page.json
+++ b/src/app/i18n/locales/zh-CN/landing-page.json
@@ -12,5 +12,46 @@
   "subscribe.email.placeholder": "请输入邮箱地址",
   "subscribe.email.invalid": "请输入正确的邮箱",
   "subscribe.success": "订阅成功！",
-  "subscribe.error": "订阅失败，请稍后再试"
+  "subscribe.error": "订阅失败，请稍后再试",
+  "hero.enterprise.title": "MuseDAM",
+  "hero.enterprise.subtitle": "AI 原生数字资产管理，驱动品牌增长，让内容管理轻松高效，守护数字资产安全",
+  "hero.enterprise.button": "预约演示",
+  "hero.enterprise.why.title": "为什么需要 AI 原生的数字资产管理？",
+  "hero.enterprise.why.desc": "MuseDAM 通过人工智能技术从根本上改变了数字资产管理方式，提供三大核心价值",
+  "hero.enterprise.accordion.growth.title": "驱动品牌业务增长",
+  "hero.enterprise.accordion.growth.desc": "让静态资产成为业务增长引擎",
+  "hero.enterprise.accordion.growth.line1.title": "AskMuse 智能引擎：",
+  "hero.enterprise.accordion.growth.line1.desc": "3分钟生成专业营销文案，告别从零开始的创作痛苦",
+  "hero.enterprise.accordion.growth.line2.title": "智能内容洞察：",
+  "hero.enterprise.accordion.growth.line2.desc": "AI分析高效内容模式，为新项目提供数据驱动的创作建议",
+  "hero.enterprise.accordion.growth.line3.title": "深度价值挖掘：",
+  "hero.enterprise.accordion.growth.line3.desc": "自动发现\"躺在硬盘里\"资产的潜在商业价值",
+  "hero.enterprise.accordion.growth.result1": "内容制作效率提升300%",
+  "hero.enterprise.accordion.growth.result2": "营销素材复用率提升60%",
+  "hero.enterprise.accordion.lifecycle.title": "简化内容生命周期",
+  "hero.enterprise.accordion.lifecycle.desc": "AI 原生技术彻底简化内容从创建到归档的全过程",
+  "hero.enterprise.accordion.lifecycle.line1.title": "自然语言搜索：",
+  "hero.enterprise.accordion.lifecycle.line1.desc": "直接说\"找个红色背景的产品图\"，AI立即精准定位",
+  "hero.enterprise.accordion.lifecycle.line2.title": "AI自动分类：",
+  "hero.enterprise.accordion.lifecycle.line2.desc": "上传即自动识别内容、场景、色彩，彻底解放双手",
+  "hero.enterprise.accordion.lifecycle.line3.title": "高效版本控制：",
+  "hero.enterprise.accordion.lifecycle.line3.desc": "一键回滚，再也不怕\"改错找不回\"",
+  "hero.enterprise.accordion.lifecycle.line4.title": "无缝团队协作：",
+  "hero.enterprise.accordion.lifecycle.line4.desc": "@同事、评论、权限设置，让协作如聊天般简单",
+  "hero.enterprise.accordion.lifecycle.result1": "查找时间减少90%",
+  "hero.enterprise.accordion.lifecycle.result2": "团队效率提升80%",
+  "hero.enterprise.accordion.lifecycle.result3": "交付周期缩短35%",
+  "hero.enterprise.accordion.assets.title": "保护数字资产",
+  "hero.enterprise.accordion.assets.desc": "企业级安全与智能控制确保品牌资产安全无忧",
+  "hero.enterprise.accordion.assets.line1.title": "精细权限管控：",
+  "hero.enterprise.accordion.assets.line1.desc": "部门级、项目级、文件级三层权限体系",
+  "hero.enterprise.accordion.assets.line2.title": "智能水印保护：",
+  "hero.enterprise.accordion.assets.line2.desc": "动态显示访问者信息，防止未授权使用",
+  "hero.enterprise.accordion.assets.line3.title": "全程操作日志：",
+  "hero.enterprise.accordion.assets.line3.desc": "60+核心操作记录，资产使用轨迹清晰可追溯",
+  "hero.enterprise.accordion.assets.line4.title": "安全分享机制：",
+  "hero.enterprise.accordion.assets.line4.desc": "白名单、有效期、密码保护多重防护",
+  "hero.enterprise.accordion.assets.result1": "降低85%数据泄露风险",
+  "hero.enterprise.accordion.assets.result2": "确保100%操作可追溯",
+  "hero.enterprise.accordion.result": "成果："
 }
