--- a/src/app/i18n/locales/en-US/why-muse.json
+++ b/src/app/i18n/locales/en-US/why-muse.json
@@ -3,6 +3,7 @@
     "banner.text.1": "Experience MuseDAM's AI-Native Platform.",
     "banner.text.2": "Free demo, instant insights.",
     "button.schedule-demo": "Schedule a demo",
+    "button.start": "Start for free",
     "why.title": "Why Muse?",
     "why.subtitle": "Recognized by Top Lists",
     "collect.title": "No.1",
