--- a/src/app/i18n/locales/zh-CN/ai-natives.json
+++ b/src/app/i18n/locales/zh-CN/ai-natives.json
@@ -2,6 +2,7 @@
     "section.title": "六大 AI 原生能力，赋能品牌增长",
     "section.desc": "MuseDAM 企业版通过 AI 原生技术全面提升数字资产管理的六大核心能力",
     "button.book-demo": "预约演示",
+    "button.start": "免费注册",
     "collect.title": "智能资产管理与组织",
     "collect.description": "简化内容生命周期",
     "organize.title": "对话式搜索与发现",
