--- a/src/app/i18n/locales/zh-CN/why-muse.json
+++ b/src/app/i18n/locales/zh-CN/why-muse.json
@@ -3,6 +3,7 @@
     "banner.text.1": "探索 MuseDAM 的 AI 原生平台。",
     "banner.text.2": "免费演示，即时获取洞察。",
     "button.schedule-demo": "预约演示",
+    "button.start": "免费注册",
     "why.title": "为什么 Muse?",
     "why.subtitle": "已被顶级榜单认可",
     "collect.title": "No.1",
