fix: some ui bug

--- a/src/app/i18n/locales/en-US/footer.json
+++ b/src/app/i18n/locales/en-US/footer.json
@@ -1,6 +1,6 @@
 {
   "features.ai-search": "AI Search",
-  "features.ai-parsing": "AI Parsing",
+  "features.ai-parsing": "AI analyze",
   "features.ai-content-creation": "AI Content Creation",
   "features.auto-tags": "Auto Tags",
   "features.muse-copilot": "MuseCopilot",
