--- a/src/app/i18n/locales/en-US/header.json
+++ b/src/app/i18n/locales/en-US/header.json
@@ -1,7 +1,7 @@
 {
   "ai-powered.ai-search.title": "AI Search",
   "ai-powered.ai-search.description": "Visual Content Asset Search",
-  "ai-powered.ai-parsing.title": "AI Parsing",
+  "ai-powered.ai-parsing.title": "AI analyze",
   "ai-powered.ai-parsing.description": "Visuals, Color Schemes, Themes, etc.",
   "ai-powered.ai-content-creation.title": "AI Content Creation",
   "ai-powered.ai-content-creation.description": "Craft Blog from Asset Insights",
