--- a/src/app/i18n/locales/en-US/highlight.json
+++ b/src/app/i18n/locales/en-US/highlight.json
@@ -14,7 +14,7 @@
   "collaborate.list.3": "Active Leaderboard",
   "ai-generate.title": "AI-Powered",
   "ai-generate.description.0": "Ignite creativity and streamline workflows with MuseDAM's all-in-one AI toolkit.",
-  "ai-generate.point.0.title": "AI Parsing ✨",
+  "ai-generate.point.0.title": "AI analyze ✨",
   "ai-generate.point.0.description": "Instantly decode your assets for insights, from descriptions to color schemes.",
   "ai-generate.point.1.title": "AI Search \uD83D\uDD0D",
   "ai-generate.point.1.description": "Effortlessly find assets with our advanced search.",
