--- a/src/app/i18n/locales/en-US/pricing.json
+++ b/src/app/i18n/locales/en-US/pricing.json
@@ -12,7 +12,7 @@
   "plan.details.storage.hint.zh": "The total capacity of storage space includes MuseAI + MuseDAM",
   "pricing.summary.points.onetime": "One-time {{val}} points",
   "pricing.perMonth": "PER MONTH",
-  "pricing.summary.ai": "AI parsing & creation",
+  "pricing.summary.ai": "AI analyze & creation",
   "pricing.summary.storage": "{{val}} team storage",
   "pricing.summary.storage.personal": "{{val}} storage",
   "pricing.summary.storage.personal.start": "Starting from {{val}}",
@@ -514,8 +514,8 @@
   "pricing.points.validity": "Point expiry",
   "pricing.points.validity.hint": "MuseAI points are divided into package points and permanent points. Package points are issued in line with the package cycle; permanent points can be purchased additionally and are valid until depleted",
   "pricing.ai_search.label": "Smart searching",
-  "pricing.ai_search.hint": "Content can be intelligently searched using AI parsing of assets",
-  "pricing.ai_analysis.label": "AI parsing",
+  "pricing.ai_search.hint": "Content can be intelligently searched using AI analyze of assets",
+  "pricing.ai_analysis.label": "AI analyze",
   "pricing.ai_smart_rename.label": "AI Smart Renaming",
   "pricing.ai_auto_smart_parsing.label": "AI Auto Parsing",
   "pricing.ai_custom_smart_parsing.label": "AI Custom Parsing",
