--- a/src/app/i18n/locales/zh-CN/why-muse.json
+++ b/src/app/i18n/locales/zh-CN/why-muse.json
@@ -4,7 +4,7 @@
     "banner.text.2": "免费演示，即时获取洞察。",
     "button.schedule-demo": "预约演示",
     "button.start": "免费注册",
-    "why.title": "为什么 Muse?",
+    "why.title": "为什么选 Muse?",
     "why.subtitle": "已被顶级榜单认可",
     "collect.title": "No.1",
     "collect.description": "DAM + GenAI 解决方案",
