--- a/src/app/i18n/locales/en-US/ai-parsing.json
+++ b/src/app/i18n/locales/en-US/ai-parsing.json
@@ -1,17 +1,13 @@
 {
-  "hero.tag": "AI Parsing",
-  "hero.title": "Deep Dive into Your Assets with AI Parsing",
-  "hero.description": "MuseDAM's AI Parsing technology goes deep to unlock the full potential of your creative assets. It analyzes images beyond basic tags, uncovering detailed insights into content, colors, mood, and more. This intelligence empowers you to search and find the perfect asset for your project with remarkable speed and precision.",
-
+  "hero.tag": "AI analyze",
+  "hero.title": "Deep Dive into Your Assets with AI analyze",
+  "hero.description": "MuseDAM's AI analyze technology goes deep to unlock the full potential of your creative assets. It analyzes images beyond basic tags, uncovering detailed insights into content, colors, mood, and more. This intelligence empowers you to search and find the perfect asset for your project with remarkable speed and precision.",
   "showcase.title": "Streamlined Search for Your Creative Workflow",
   "showcase.description": "By harnessing MuseDAM's intelligent analysis, you revolutionize the way you interact with your assets, achieving unprecedented detail and efficiency in managing and utilizing your creative resources.",
-
   "showcase.points.0.keyword": "Content Analysis",
   "showcase.points.0.description": "Uncover the essence of your images with MuseDAM's intelligent technology, dissecting scenes, subjects, and context into actionable search data that meets your creative requirements.",
-
   "showcase.points.1.keyword": "Color",
   "showcase.points.1.description": "Match your vision with assets that fit your color palette, leveraging our technology's ability to recognize and categorize color schemes within images.",
-
   "showcase.points.2.keyword": "Mood",
   "showcase.points.2.description": "Select assets that resonate with the emotional tone of your project, with our system identifying mood and atmosphere."
 }
