feat: update form and text

--- a/src/app/i18n/locales/en-US/landing-page.json
+++ b/src/app/i18n/locales/en-US/landing-page.json
@@ -15,7 +15,9 @@
   "subscribe.error": "Subscribe failed, please try again later",
   "hero.enterprise.title": "Muse AI-Native DAM",
   "hero.enterprise.subtitle": "for brands that drive growth, streamline content, and protect assets",
-  "hero.enterprise.button": "Book a demo",
+  "hero.enterprise.contactUs": "Contact us",
+  "hero.enterprise.button": "Get solutions",
+  "hero.enterprise.seePricing": "See pricing",
   "hero.enterprise.why.title": "Why AI-Native Digital Asset Management?",
   "hero.enterprise.why.desc": "MuseDAM leverages AI to revolutionize digital asset management, delivering three core values",
   "hero.enterprise.accordion.growth.title": "Drive Business Growth",
