--- a/src/app/i18n/locales/zh-CN/information.json
+++ b/src/app/i18n/locales/zh-CN/information.json
@@ -2,30 +2,35 @@
     "title": "准备好了解 MuseDAM 企业版了吗？",
     "desc": "与我们聊聊，了解为什么众多知名品牌选择 MuseDAM 的AI原生技术来升级他们的数字资产管理。",
     "list": [
-        "<1>免费咨询，没有任何义务</1>",
-        "<1>轻松的10分钟交流，</1>了解您的实际需求",
-        "<1>接下来安排专属产品演示，</1>展示真正适合您的功能",
-        "<1>获得详细的实施建议，</1>助您快速上手使用"
+        "<1>免费获取专属企业解决方案，</1>无任何义务",
+        "<1>我们的专家将根据您的需求，</1>为您匹配最适合的产品方案",
+        "<1>多种了解方式，</1>产品资料包、定期在线演示或专属咨询服务",
+        "<1>获得详细的实施建议，</1>助您快速启动项目"
     ],
     "security": "专为企业安全而打造",
     "form": {
-        "title": "让我们稍微了解您",
-        "name.label": "1. 您的姓名",
+        "title": "为了更好地为您服务，请提供准确信息",
+        "name.label": "您的姓名",
         "name.placeholder": "请输入您的姓名",
-        "phone.label": "2. 您的手机号",
+        "phone.label": "您的手机号",
         "phone.placeholder": "请输入您的手机号",
         "phone.invalid": "请输入正确的手机号",
-        "email.label": "2. 公司邮箱",
+        "email.invalid": "请输入正确的邮箱",
+        "email.label": "公司邮箱",
         "email.placeholder": "请输入您的公司邮箱",
-        "company.label": "3. 公司全称",
+        "company.label": "公司全称",
         "company.placeholder": "请输入您的公司全称",
+        "companyEmail.label": "您的企业邮箱",
+        "companyEmail.placeholder": "请输入您的企业邮箱",
+        "wechat.label": "您的微信号",
+        "wechat.placeholder": "请输入您的微信号",
         "size": {
-            "label": "5. 选择公司/团队人数",
+            "label": "选择公司/团队人数",
             "2-10": "2-10",
-            "11-50": "11-50",
-            "51-200": "51-200",
-            "201-500": "201-500",
-            "501-1,000": "501-1,000",
+            "11-50": "11-30",
+            "51-200": "31-100",
+            "201-500": "101-300",
+            "501-1,000": "301-1,000",
             "1000+": "1,000+"
         },
         "position": {
@@ -40,7 +45,7 @@
             "notSure": "暂不确定，只是期望了解",
             "label": "6. 预估多久内需要采购 MuseDAM？"
         },
-        "submit": "预约演示",
+        "submit": "获取解决方案",
         "submitSuccess": "提交成功",
         "submitError": "提交失败，请重试",
         "required": "请填写您的信息"
