--- a/src/app/i18n/locales/zh-CN/landing-page.json
+++ b/src/app/i18n/locales/zh-CN/landing-page.json
@@ -15,7 +15,9 @@
   "subscribe.error": "订阅失败，请稍后再试",
   "hero.enterprise.title": "MuseDAM",
   "hero.enterprise.subtitle": "AI 原生数字资产管理，驱动品牌增长，让内容管理轻松高效，守护数字资产安全",
-  "hero.enterprise.button": "预约演示",
+  "hero.enterprise.button": "获取解决方案",
+  "hero.enterprise.contactUs": "联系我们",
+  "hero.enterprise.seePricing": "查看价格",
   "hero.enterprise.why.title": "为什么需要 AI 原生的数字资产管理？",
   "hero.enterprise.why.desc": "MuseDAM 通过人工智能技术从根本上改变了数字资产管理方式，提供三大核心价值",
   "hero.enterprise.accordion.growth.title": "驱动品牌业务增长",
