--- a/src/app/i18n/locales/zh-CN/why-muse.json
+++ b/src/app/i18n/locales/zh-CN/why-muse.json
@@ -1,7 +1,7 @@
 {
     "section.title": "MuseDAM 为全球领先品牌打造高效、智能的企业数字资产管理新模式。",
     "banner.text.1": "探索 MuseDAM 的 AI 原生平台。",
-    "banner.text.2": "免费演示，即时获取洞察。",
+    "banner.text.2": "免费解决方案，即时获取洞察。",
     "button.schedule-demo": "预约演示",
     "button.start": "免费注册",
     "why.title": "为什么选 Muse?",
