--- a/src/app/i18n/locales/en-US/information.json
+++ b/src/app/i18n/locales/en-US/information.json
@@ -2,45 +2,50 @@
     "title": "Ready to discover <1/>MuseDAM Enterprise?",
     "desc": "Chat with us and see why leading brands choose <1/>MuseDAM's AI-native technology to transform their digital asset management.",
     "list": [
-        "<1>Free consultation</1>, no obligations whatsoever",
-        "<1>Relaxed 15-minute conversation</1> to understand your real needs",
-        "<1>Followed by a personalized product demo</1> showcasing features that truly fit your workflow",
+        "<1>Free customized enterprise solutions</1>, no obligations whatsoever",
+        "<1>Expert-matched product solutions</1> with personalized recommendations for your needs",
+        "<1>Multiple ways to engage</1>, info kits, regular live demos, exclusive consulting",
         "<1>Detailed implementation guidance</1> to get you up and running quickly"
     ],
     "security": "Built for enterprise security",
     "form": {
         "title": "Let's get to know you",
-        "name.label": "1. Your Name",
+        "name.label": "Your Name",
         "name.placeholder": "Enter your name",
-        "email.label": "2. Company Email",
+        "email.label": "Company Email",
         "email.placeholder": "Enter your company email",
-        "phone.label": "2. Phone Number",
+        "phone.label": "Phone Number",
         "phone.placeholder": "Enter your phone number",
         "phone.invalid": "Please enter a correct phone number",
-        "company.label": "3. Company Name",
+        "email.invalid": "Please enter a correct email number",
+        "company.label": "Company Name",
         "company.placeholder": "Enter your company name",
         "size": {
-            "label": "5. Select your company/team size",
+            "label": "Select your company/team size",
             "2-10": "2-10",
-            "11-50": "11-50",
-            "51-200": "51-200",
-            "201-500": "201-500",
-            "501-1,000": "501-1,000",
+            "11-50": "11-30",
+            "51-200": "31-100",
+            "201-500": "101-300",
+            "501-1,000": "301-1,000",
             "1000+": "1,000+"
         },
         "position": {
-            "label": "4. Your Position",
+            "label": "Your Position",
             "placeholder": "Enter your position"
         },
+        "companyEmail.label": "Your Company Email",
+        "companyEmail.placeholder": "Enter your company email",
+        "wechat.label": "Your Wechat",
+        "wechat.placeholder": "Enter your wechat",
         "expect": {
             "1month": "Within 1 month",
             "3months": "Within 3 months",
             "6months": "Within 6 months",
             "1year": "Within 1 year",
             "notSure": "Not sure yet, just exploring options",
-            "label": "6. When do you expect to purchase MuseDAM?"
+            "label": "When do you expect to purchase MuseDAM?"
         },
-        "submit": "Book a Demo",
+        "submit": "Get solutions",
         "submitSuccess": "Submitted successfully",
         "submitError": "Submission failed, please try again",
         "required": "Please fill in all fields"
