--- a/src/app/i18n/locales/en-US/why-muse.json
+++ b/src/app/i18n/locales/en-US/why-muse.json
@@ -1,7 +1,7 @@
 {
     "section.title": "MuseDAM, revolutionizes enterprise digital asset management for leading global brands.",
     "banner.text.1": "Experience MuseDAM's AI-Native Platform.",
-    "banner.text.2": "Free demo, instant insights.",
+    "banner.text.2": "Free Solutions, Instant Insights.",
     "button.schedule-demo": "Schedule a demo",
     "button.start": "Start for free",
     "why.title": "Why Muse?",
