--- a/src/app/i18n/locales/en-US/pricing.json
+++ b/src/app/i18n/locales/en-US/pricing.json
@@ -1,5 +1,5 @@
 {
-  "pricing.bookDemo": "Book a demo",
+  "pricing.bookDemo": "Get solutions",
   "pricing.title": "Plans",
   "pricing.plan.tab.personal": "Individual",
   "pricing.plan.tab.team": "Team",
