--- a/src/app/i18n/locales/zh-CN/pricing.json
+++ b/src/app/i18n/locales/zh-CN/pricing.json
@@ -1,5 +1,5 @@
 {
-  "pricing.bookDemo": "预约演示",
+  "pricing.bookDemo": "获取解决方案",
   "pricing.title": "购买套餐",
   "pricing.plan.tab.personal": "个人版",
   "pricing.plan.tab.team": "团队版",
