--- a/src/app/i18n/locales/en-US/ai-natives.json
+++ b/src/app/i18n/locales/en-US/ai-natives.json
@@ -1,7 +1,7 @@
 {
     "section.title": "Six AI-Native Capabilities Powering Brand Growth",
     "section.desc": "MuseDAM Enterprise enhances six core digital asset management capabilities through AI-native technology.",
-    "button.book-demo": "Book a demo",
+    "button.book-demo": "Get solutions",
     "button.start": "Start for free",
     "collect.title": "Intelligent Asset Management & Organization",
     "collect.description": "Streamline Content Lifecycle",
