feat: update pricing page

--- a/src/app/i18n/locales/en-US/pricing.json
+++ b/src/app/i18n/locales/en-US/pricing.json
@@ -1,6 +1,7 @@
 {
-  "pricing.bookDemo": "Get solutions",
+  "pricing.bookDemo": "Book a demo",
   "pricing.title": "Plans",
+  "pricing.title.new": "Pricing",
   "pricing.plan.tab.personal": "Individual",
   "pricing.plan.tab.team": "Team",
   "contact.title": "Contact us",
@@ -13,7 +14,9 @@
   "pricing.summary.points.onetime": "One-time {{val}} points",
   "pricing.perMonth": "PER MONTH",
   "pricing.summary.ai": "AI analyze & creation",
+  "pricing.summary.ai.new": "AI analyze & AI rename",
   "pricing.summary.storage": "{{val}} team storage",
+  "pricing.summary.storage.expand": "{{val}} team storage · expandable",
   "pricing.summary.storage.personal": "{{val}} storage",
   "pricing.summary.storage.personal.start": "Starting from {{val}}",
   "pricing.summary.seats": "{{val}} seats . expandable",
@@ -536,5 +539,22 @@
   "pricing.give.away.points.month.computing.power.points": "Give away {{point}} points / month computing power points",
   "pricing.click.view": ". Click to view ",
   "pricing.fileSupport.click.view": ". Click to view online preview support ",
-  "pricing.fileSupport.linkText": "all file formats"
+  "pricing.fileSupport.linkText": "all file formats",
+  "pricing.from": "FROM",
+  "pricing.perMonth.new": "/MONTH",
+  "pricing.contact.sales": "Contact Sales",
+  "pricing.enterpriseSummary.basicFolderPermissions": "Basic folder permissions",
+  "pricing.enterpriseSummary.includesAllBasic": "Includes all Basic Plan features",
+  "pricing.enterpriseSummary.advancedPermissions": "Advanced permission controls",
+  "pricing.enterpriseSummary.advancedExtensions": "Advanced extension module options",
+  "pricing.enterpriseSummary.customPlans": "Custom seat and storage plans",
+  "pricing.enterpriseSummary.dedicatedManager": "Dedicated customer success manager",
+  "pricing.enterpriseSummary.awsDeployment": "AWS private deployment",
+  "pricing.enterpriseSummary.sla": "SLA service level agreements",
+  "pricing.enterpriseBilling.basic.title": "Basic",
+  "pricing.enterpriseBilling.basic.description": "Ideal for individuals or small teams",
+  "pricing.enterpriseBilling.advanced.title": "Advanced",
+  "pricing.enterpriseBilling.advanced.description": "Suitable for medium to large teams and enterprises",
+  "pricing.enterpriseBilling.custom.title": "Custom",
+  "pricing.enterpriseBilling.custom.description": "Designed for large organizations with special requirements"
 }
