--- a/src/app/i18n/locales/zh-CN/information.json
+++ b/src/app/i18n/locales/zh-CN/information.json
@@ -1,6 +1,6 @@
 {
     "title": "准备好了解 MuseDAM 企业版了吗？",
-    "desc": "与我们聊聊，了解为什么众多知名品牌选择 MuseDAM 的AI原生技术来升级他们的数字资产管理。",
+    "desc": "与我们聊聊，了解为什么众多知名品牌选择 MuseDAM 来升级他们的数字资产管理。",
     "list": [
         "<1>免费获取专属企业解决方案，</1>无任何义务",
         "<1>我们的专家将根据您的需求，</1>为您匹配最适合的产品方案",
