--- a/src/app/i18n/locales/zh-CN/pricing.json
+++ b/src/app/i18n/locales/zh-CN/pricing.json
@@ -1,6 +1,7 @@
 {
-  "pricing.bookDemo": "获取解决方案",
+  "pricing.bookDemo": "预约演示",
   "pricing.title": "购买套餐",
+  "pricing.title.new": "价格",
   "pricing.plan.tab.personal": "个人版",
   "pricing.plan.tab.team": "团队版",
   "contact.title": "联系我们",
@@ -75,7 +76,9 @@
   "pricing.team": "团队版",
   "pricing.personal.pro.tag": "限个人使用",
   "pricing.summary.ai": "AI 智能解析 & 内容创作",
+  "pricing.summary.ai.new": "AI 智能解析 & 智能重命名",
   "pricing.summary.storage": "{{val}} 存储空间",
+  "pricing.summary.storage.expand": "{{val}} 存储空间 · 可扩展",
   "pricing.summary.storage.personal": "{{val}} 存储空间",
   "pricing.summary.storage.personal.start": "{{val}} 起",
   "plan.details.points": "算力点数",
@@ -536,5 +539,22 @@
   "pricing.ai_tag.hint": "可对指定文件夹中图片素材进行智能打标",
   "pricing.copilot.label": "MuseCopilot",
   "pricing.copilot.hint": "可根据素材或文件夹内容，与 Copilot 机器人进行问答及对话",
-  "pricing.give.away.points.month.computing.power.points": "赠送{{point}}点/月算力点数"
+  "pricing.give.away.points.month.computing.power.points": "赠送{{point}}点/月算力点数",
+  "pricing.from": "起步价",
+  "pricing.perMonth.new": "/月",
+  "pricing.contact.sales": "联系销售",
+  "pricing.enterpriseSummary.basicFolderPermissions": "基础文件夹权限",
+  "pricing.enterpriseSummary.includesAllBasic": "包含基础版所有功能",
+  "pricing.enterpriseSummary.advancedPermissions": "高级权限控制",
+  "pricing.enterpriseSummary.advancedExtensions": "高级扩展模块选项",
+  "pricing.enterpriseSummary.customPlans": "定制化席位数和存储容量",
+  "pricing.enterpriseSummary.dedicatedManager": "专属的客户成功经理",
+  "pricing.enterpriseSummary.awsDeployment": "AWS 私有化部署",
+  "pricing.enterpriseSummary.sla": "SLA 服务水平协议",
+  "pricing.enterpriseBilling.basic.title": "基础版",
+  "pricing.enterpriseBilling.basic.description": "适合小团队",
+  "pricing.enterpriseBilling.advanced.title": "高级版",
+  "pricing.enterpriseBilling.advanced.description": "适用于中大型团队和企业",
+  "pricing.enterpriseBilling.custom.title": "定制版",
+  "pricing.enterpriseBilling.custom.description": "专为有特殊要求的大型机构设计"
 }
