--- a/src/app/i18n/locales/en-US/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/en-US/pricing-enterprise-features.json
@@ -1,6 +1,6 @@
 {
-    "Basic": "Team",
-    "Advanced": "Enterprise",
+    "Basic": "Basic",
+    "Advanced": "Advanced",
     "ValueAddedServices": "Value-Added Services",
     "aiCapabilities.title": "AI Capabilities",
     "aiCapabilities.0.name": "AI Auto Parsing",
