--- a/src/app/i18n/locales/zh-CN/pricing.json
+++ b/src/app/i18n/locales/zh-CN/pricing.json
@@ -10,6 +10,7 @@
   "contact.copy.success": "邮箱已复制",
   "pricing.plan.button.buy": "立即购买",
   "pricing.plan.actions.try": "免费体验",
+  "pricing.plan.actions.try.now": "免费试用",
   "pricing.plan.actions.upgrade-now": "立即升级",
   "pricing.plan.actions.renew-now": "立即续费",
   "pricing.plan.actions.view-whole-plans": "查看全部套餐权益",
@@ -549,7 +550,7 @@
   "pricing.enterpriseSummary.advancedExtensions": "高级扩展模块选项",
   "pricing.enterpriseSummary.customPlans": "定制化席位数和存储容量",
   "pricing.enterpriseSummary.dedicatedManager": "专属的客户成功经理",
-  "pricing.enterpriseSummary.awsDeployment": "AWS 私有化部署",
+  "pricing.enterpriseSummary.awsDeployment": "阿里云/AWS 私有化部署",
   "pricing.enterpriseSummary.sla": "SLA 服务水平协议",
   "pricing.enterpriseBilling.basic.title": "基础版",
   "pricing.enterpriseBilling.basic.description": "适合小团队",
