feat: add quotation api and export

--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -46,6 +46,7 @@
     "advanced.aiPoints.des": "$1000/year (appr. $0.02/point)",
     "quote.overview": "MuseDAM Quote Overview",
     "quote.title": "MuseDAM Quote",
+    "quote.export": "Export",
     "quote.NO": "Quote No.",
     "product.service.details": "Product and Service Details",
     "basic.edition": "MuseDAM Basic Edition",
