--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -46,6 +46,7 @@
     "quote.overview": "MuseDAM 报价概览",
     "service.provider.yourName": "联系：业务顾问",
     "quote.title": "MuseDAM 报价",
+    "quote.export": "导出",
     "quote.NO": "报价单 No.",
     "quote.date": "报价日期",
     "quote.valid.days": "有效期为30天",
