feat: show blog and global pricing

--- a/src/app/i18n/locales/en-US/header.json
+++ b/src/app/i18n/locales/en-US/header.json
@@ -40,6 +40,7 @@
   "nav-bar.about-us": "About Us",
   "nav-bar.extension": "Extension",
   "nav-bar.careers": "Careers",
+  "nav-bar.blog": "Blog",
   "button.login": "Login",
   "button.enter": "Enter",
   "more-features.ai-content-creation.title": "Content Creation",
