--- a/src/app/i18n/locales/zh-CN/header.json
+++ b/src/app/i18n/locales/zh-CN/header.json
@@ -40,6 +40,7 @@
   "nav-bar.about-us": "关于我们",
   "nav-bar.extension": "采集插件",
   "nav-bar.careers": "工作机会",
+  "nav-bar.blog": "博客",
   "button.login": "登录",
   "button.enter": "进入",
   "more-features.ai-content-creation.title": "内容创作",
